# Laboratorios_Programacion

./: .gitignore  README.md  pyproject.toml
Cohorte I/Semana 1/: PY0101EN-1-1-Write_your_first_python_code.ipynb  PY0101EN-1-2-Strings.ipynb  PY0101EN-2-1-Tuples.ipynb  PY0101EN-2-2-Lists.ipynb  PY0101EN-2-3-Sets.ipynb  PY0101EN-2-4-Dictionaries.ipynb
Cohorte I/Semana 2/: 3-1.2ExcecptionHandling.ipynb  PY0101EN-3-1-Conditions.ipynb  PY0101EN-3-2-Loops.ipynb  PY0101EN-3-3-Functions .ipynb  PY0101EN-4-1-ReadFile.ipynb  PY0101EN-4-2-WriteFile.ipynb  inactive.txt  members.txt  testAppend.txt  testWrite.txt
Cohorte I/Semana 3/: DA0101EN-Review-Introduction.jupyterlite.ipynb  Module 4_Pandas_Practice.ipynb  Module 5_PY0101EN-5-1-Numpy1D.ipynb  Module 5_PY0101EN-5-2-Numpy2D.ipynb
Cohorte II/Data-Wrangling/: DA0101EN-2-Review-Data-Wrangling.ipynb  clean_df.csv
Cohorte II/EDA/Wine/: DA0101EN-3-Review-Exploratory-Data-Analysis.ipynb
